--- a/angular.json
+++ b/angular.json
@@ -26,7 +26,7 @@
             "styles": [
               "node_modules/toastr/build/toastr.min.css",
               "node_modules/bootstrap/dist/css/bootstrap.min.css",
-              "src/styles.css"
+              "src/styles.scss"
             ],
             "scripts": [
               "node_modules/jquery/dist/jquery.min.js",
