--- a/angular.json
+++ b/angular.json
@@ -6,8 +6,11 @@
     "ng-fundamentals": {
       "projectType": "application",
       "schematics": {
+        "@schematics/angular:component": {
+          "style": "scss"
+        },
         "@schematics/angular:application": {
-          "strict": true
+          "strict": false
         }
       },
       "root": "",
